# MinecraftPPpt2

./: .gitignore  .gitmodules  CMakeLists.txt
assets/shaders/: chunk.frag  chunk.vert
dependencies/glad/: CMakeLists.txt
dependencies/glad/glad/: glad.c  glad.h
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
dependencies/stb_image/: CMakeLists.txt
include/: game.hpp  window.hpp
include/block/: block.hpp  chunk.hpp  vertex.hpp
include/core/: callbacks.hpp  camera.hpp  game.hpp  globals.hpp  logger.hpp  shader.hpp  types.hpp
include/renderer/: chunk_renderer.hpp  cube_renderer.hpp  glad.hpp  renderer.hpp
include/texture/: assets.hpp  texture.hpp  texture_atlas.hpp
include/util/: enum.hpp  rang.hpp
include/world/: block.hpp  chunk.hpp  vertex.hpp  world.hpp
src/: main.cpp
src/core/: camera.cpp  game.cpp  logger.cpp  shader.cpp
src/renderer/: renderer.cpp
src/texture/: assets.cpp  texture.cpp
src/world/: block.cpp  chunk.cpp  world.cpp
